--- a/register.html
+++ b/register.html
@@ -8,19 +8,53 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div id="preloader">
+        <div class="newtons-cradle">
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+        </div>
+    </div>
+    <!-- From Uiverse.io by Rahulcheryala --> 
+<!-- From Uiverse.io by xopc333 --> 
+<button class="button" id="homeButton">
+  <div class="button-box">
+    <span class="button-elem">
+      <svg viewBox="0 0 46 40" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z"
+        ></path>
+      </svg>
+    </span>
+    <span class="button-elem">
+      <svg viewBox="0 0 46 40">
+        <path
+          d="M46 20.038c0-.7-.3-1.5-.8-2.1l-16-17c-1.1-1-3.2-1.4-4.4-.3-1.2 1.1-1.2 3.3 0 4.4l11.3 11.9H3c-1.7 0-3 1.3-3 3s1.3 3 3 3h33.1l-11.3 11.9c-1 1-1.2 3.3 0 4.4 1.2 1.1 3.3.8 4.4-.3l16-17c.5-.5.8-1.1.8-1.9z"
+        ></path>
+      </svg>
+    </span>
+  </div>
+</button>
+
+    <div id="conteudo" style="display: none;">
     <main class="container1">
-        <form action="#">
+        <form action="#" id="registerForm">
             <h1>Register Area</h1>
-            <div class="email-register" id="email">
-                <input type="email" placeholder="E-mail" required>
+            <div class="email-register">
+                <input type="email" id="email-register" placeholder="E-mail" required>
+                <span class="error-msg"></span>
+
                 <i class="bx bxs-user"></i>
             </div>
-            <div class="password-register" id="create-password">
-                <input type="password" placeholder="New password" required>
+            <div class="register-password">
+                <input type="password" id="register-password" placeholder="New password" required>
+                <span class="error-msg"></span>                
                 <i class="bx bxs-lock-alt"></i>
             </div>
-            <div class="confirm-password-register" id="create-password">
-                <input type="password" placeholder="Confirm password" required>
+            <div class="confirm-password-register">
+                <input type="password" id="confirm-password" placeholder="Confirm password" required>
                 <i class="bx bxs-lock-alt"></i>
             </div>
             <button type="submit" class="register">
@@ -28,5 +62,8 @@
             </button>
         </form>
     </main>
+    </div>
+        <script src="main.js"></script>
+
 </body>
 </html>
