--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="newtons-cradle__dot"></div>
         </div>
     </div>
-    <div id="conteudo" style="display: none;">
+    <div id="conteudo">
     <main class="container">
         <form action="#" id="loginForm">  
             <h1>Login Area</h1>
