--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 
 </head>
 <body>
-    <div id="conteudo">
+    <!-- loader --> 
+     <div id="preloader">
+        <div class="newtons-cradle">
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+            <div class="newtons-cradle__dot"></div>
+        </div>
+    </div>
+    <div id="conteudo" style="display: none;">
     <main class="container">
         <form action="#" id="loginForm">  
             <h1>Login Area</h1>
